# note-emu

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  ci.sh  fix_mbedtls.py  library.json  library.properties
.githooks/: pre-commit
.github/workflows/: ci.yml  endpoints.yml
docs/: migrating-to-physical-notecard.md  softcard-protocol.md  wokwi-notecard-chip.md
docs/specs/: 2026-04-09-wasi-socket-probe-design.md
examples/: README.md
examples/arduino/: README.md
examples/arduino/note_c_example/: note_c_example.ino
examples/native/: Makefile  README.md  main.c
examples/platformio/: README.md  platformio.ini
examples/platformio-bridge/: README.md  platformio.ini  sample-output.txt
examples/platformio-bridge/src/: main.cpp  (+1 more)
examples/platformio-note-cpp-app/: README.md  platformio.ini
examples/platformio-notecard/: README.md  platformio.ini
examples/platformio-notecpp/: README.md  platformio.ini
src/: note-emu.h  note_emu.c  note_emu.h  note_emu_arduino.cpp  note_emu_arduino.h  note_emu_curl.c  note_emu_curl.h  note_emu_serial_hal.hpp
tests/: notehub_api.py  run.sh  test_endpoints.py  test_firmware.py  test_softcard.py
tests/unit/: CMakeLists.txt  test_emu.cpp
tools/: inject-snippets.py  verify-docs.sh
wokwi/esp32-notec/: README.md  platformio.ini  sample-output.txt  wokwi.toml
wokwi/esp32-notecpp/: README.md  platformio.ini  sample-output.txt
wokwi/esp32-softcard/: README.md  diagram.json  secrets.ini.example
wokwi/spike/: README.md  diagram.json  probe-chip.json  probe1-stdio.c  probe2-dns.c  probe3-tcp.c  run-probe.sh  wokwi.toml
(+28 files in other folders)
